fix: high contrast in modals

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -122,9 +122,18 @@
 }
 
 .select {
+  padding: 0.5rem 0.75rem !important;
+}
+
+.bg-light .select {
   color: var(--gray-title);
   background-color: #F8F9FA;
-  padding: 0.5rem 0.75rem !important;
+}
+
+.bg-high-contrast .select {
+  color: var(--white);
+  background-color: transparent;
+  border: 2px solid var(--white);
 }
 
 .input-file {
@@ -141,7 +150,6 @@
 .input-file label {
   padding: 0.75rem 0.59rem;
   border-radius: 50%;
-  background-color: #EDEDED;
   cursor: pointer;
   position: absolute;
   top: 0;
@@ -151,11 +159,23 @@
   justify-content: center;
 }
 
+.bg-light .input-file label {
+  background-color: #EDEDED;
+}
+
+.bg-high-contrast .input-file label {
+  background-color: transparent;
+  border: 2px solid var(--white);
+}
+
 .input-file span {
   margin-left: 3.25rem;
-  color: var(--gray-title);
   font-weight: 700;
   font-size: 1rem;
+}
+
+.bg-light .input-file span {
+  color: var(--gray-title);
 }
 
 .input-file label img {
